# rustyos

./: Cargo.toml  Makefile  config.toml  rustfmt.toml  x86_64-unknown-rustyos.json
.cargo/: config.toml
acpi/: Cargo.toml
acpi/src/: lib.rs
acpi/src/tables/: header.rs  mod.rs
acpi/src/tables/fixed/: hpet.rs  madt.rs  mod.rs  rsdt.rs
kernel/: Cargo.toml  layout.ld
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  lib.rs
kernel/src/interrupts/: ioapic.rs  lapic.rs  mod.rs  pic_8259.rs  timers.rs
kernel/src/mem/: mod.rs
kernel_loader/: Cargo.toml  layout.ld
kernel_loader/src/: lib.rs
kernel_shared/: Cargo.toml
kernel_shared/src/: lib.rs  logger.rs  x86.rs
kernel_shared/src/io/: mod.rs  port.rs  serial.rs
kernel_shared/src/mem/: frame.rs  mod.rs  page.rs
kernel_shared/src/mem/frame_alloc/: bitmap.rs  mod.rs
kernel_shared/src/mem/paging/: active_table.rs  entry.rs  mapper.rs  (+3 more)
kernel_shared/src/x86/: descriptor_table_pointer.rs  exception.rs  gdt.rs  idt.rs  mod.rs  registers.rs  segment_selector.rs  tss.rs
multiboot/: Cargo.toml
multiboot/src/: lib.rs  prelude.rs
multiboot/src/boot/: basic_mem_info.rs  bios_boot_device.rs  boot_command_line.rs  boot_tag.rs  elf_symbols.rs  mem_map.rs  mod.rs  module.rs  rsdp.rs
multiboot/src/header/: address.rs  console_flags.rs  dummy.rs  efi_boot_services.rs  entry_address.rs  flags.rs  framebuffer.rs  header_tag.rs  information_request.rs  mod.rs  module_alignment.rs  relocatable.rs  tag.rs
std/src/: cursor.rs  duration.rs  lib.rs  mutex.rs
std/src/elf/: file_header.rs  mod.rs  section_header.rs
(+14 files in other folders)
